--- a/node-object-1.html
+++ b/node-object-1.html
@@ -7,8 +7,46 @@
   </head>
   <body>
     <!-- This is a comment yo -->
-    <div></div>
-    <span>Hello</span>
+    <div>
+      <span>Hello all, <br />
+        These are Node properties and methods that node elements inherit.<br />
+        Open console for more info
+      </span>
+
+      <table>
+        <thead>
+          <th>Properties</th>
+        </thead>
+        <tbody>
+          <tr><td>nodeName</td></tr>
+          <tr><td>nodeType - number</td></tr>
+          <tr><td>nodeValue - returns null for most except for comment and text nodes</td></tr>
+          <tr><td>firstChild</td></tr>
+          <tr><td>lastChild</td></tr>
+          <tr><td>parentNode</td></tr>
+          <tr><td>childNodes</td></tr>
+          <tr><td>nextSibling</td></tr>
+          <tr><td>previousSibling</td></tr>
+        </tbody>
+      </table>
+      <table>
+          <thead>
+            <th>Methods</th>
+          </thead>
+          <tbody>
+            <tr><td>contains()</td></tr>
+            <tr><td>cloneNode()</td></tr>
+            <tr><td>hasChildNodes()</td></tr>
+            <tr><td>removeChild()</td></tr>
+            <tr><td>replaceChild()</td></tr>
+            <tr><td>appendChild()</td></tr>
+            <tr><td>insertBefore()</td></tr>
+            <tr><td>isEqualNode()</td></tr>
+            <tr><td>compareDocumentPosition()</td></tr>
+          </tbody>
+        </table>
+    </div>
+
     <script type="text/javascript">
       console.log(Node);
       for (var key in Node) {
@@ -18,6 +56,8 @@
       console.log('nodeType - ', divElement.nodeType, 'nodeName - ', divElement.nodeName, 'nodeValue - ', divElement.nodeValue);
       var spanElement = document.querySelector('span');
       console.log('nodeType - ', spanElement.nodeType, 'nodeName - ', spanElement.nodeName, 'nodeValue - ', spanElement.nodeValue);
+      var textNode = spanElement.firstChild;
+      console.log(textNode.nodeValue);
       var elements = document.querySelectorAll('*');
       for (var i = 0; i < elements.length; i = i + 1) {
         console.log('nodeType - ', elements[i].nodeType, 'nodeName - ', elements[i].nodeName, 'nodeValue - ', elements[i].nodeValue);
